<?xml version="1.0"?>
<package>
  <name>niryo_one_description</name>
  <version>2.2.0</version>
  <description>Provides URDF files</description>
  <author>Edouard Renard</author>
  <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>roboticsgroup_gazebo_plugins</run_depend>

  <export>
  </export>
</package>
