<?xml version="1.0"?>
<package format="2">
  <name>niryo_one_ros_simulation</name>
  <version>2.2.0</version>
  <description>ROS packages for Niryo One simulation</description>

  <author>Edouard Renard</author>
  <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>niryo_one_description</exec_depend>
  <exec_depend>niryo_one_moveit_config</exec_depend>
  <exec_depend>niryo_one_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
